// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`[Component]: Button render component disabled 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fIJaZi"
    disabled=""
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with big size style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ hJvuMX"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render component with small size style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fdxWyO"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render ghost style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ ljIJrW"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render negative style 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ bMkSsV"
  >
    Hello world
  </button>
</DocumentFragment>
`;

exports[`[Component]: Button render the component 1`] = `
<DocumentFragment>
  <button
    class="sc-bdfBwQ fIJaZi"
  >
    Hello world
  </button>
</DocumentFragment>
`;
